2000-05-09  Akim Demaille  <akim@epita.fr>

	Let `config.status' use a private temp dir.
	Suggested by Jim Meyering.

	* acgeneral.m4 (_AC_SHELL_TMPDIR): New macro.
	(_AC_OUTPUT_CONFIG_STATUS): Use it.
	Use more quoted here docs to improve readability.
	Compute `$me' and use it in the error messages.
	Define `$configure' and `$configure_args' to avoid continuously
	mixing the uses of `configure' and `config.status' evaluation in a
	single line.
	Define `$SHELL' and use it.
	Simplify all the unjustified `[\$]foo' into `\$foo', the quotes
	are needed only for `\$[1]', `\$[@]' etc.
	Replace all the uses of `ac_cs_root' with files in the tmp dir of
	`config.status'.
	Remove a few `rm' covered by the removal of the `$tmp' dir.
	Let `config.status' support `--debug'.
	(_AC_INIT_PREPARE): Avoid the leading space in `ac_configure_args'.
	* doc/autoconf.texi (Invoking config.status): Adjust.

2000-05-05  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Set up traps to remove
	temporaries upon exit, too, not just upon receipt of signal.

2000-05-05  Akim Demaille  <akim@epita.fr>

	AC_CHECK_PROG macro fails if REJECT value is set under Digital
	Unix 4.0x and 5.0 because `"$@"' expands into an empty parameter
	(instead of nothing) when there are no positional parameters.
	From Nicolas Joly.

	* acgeneral.m4 (AC_CHECK_PROG, AC_CHECK_PROGS): Prefer
	`$$1' to `[$]$1', `$foo' to `[$]foo', `$[1]' to `[$]1', and
	`${1+"$[@]"}' to `"[$]@"'.

2000-05-04  Akim Demaille  <akim@epita.fr>

	AC_PREREQ understands `2.14a' as `2.141'.
	Reported by Didier Verna.

	* acgeneral.m4 (AC_PREREQ): Don't quote AC_ACVERSION.

2000-05-04  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AH_TOP, AH_BOTTOM): New macros.
	(_AH_COUNTER): New variable.
	* tests/tools.m4 (autoheader): Check their proper functioning.

2000-05-04  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Obsolete Macros): Rename as...
	(Obsoleting Macros): this.
	(Old Macros): Rename as...