@@ -1,5 +1,11 @@
 2000-05-09  Akim Demaille  <akim@epita.fr>
 
+	* acgeneral.m4 (_AC_OUTPUT_FILES): Don't automatically spit
+	`Generated by...' in Makefiles.
+	Fixes Autoconf/102.
+
+2000-05-09  Akim Demaille  <akim@epita.fr>
+
 	Let `config.status' use a private temp dir.
 	Suggested by Jim Meyering.
 
